--- a/src/cascadia/TerminalSettingsEditor/Profiles_Base.xaml
+++ b/src/cascadia/TerminalSettingsEditor/Profiles_Base.xaml
@@ -122,82 +122,8 @@
                     </Grid>
                 </local:SettingContainer.CurrentValue>
                 <local:SettingContainer.Content>
-                    <Grid ColumnSpacing="12">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="auto" />
-                            <ColumnDefinition Width="*" />
-                            <ColumnDefinition Width="auto" />
-                        </Grid.ColumnDefinitions>
-
-                        <!--  Icon Type  -->
-                        <ComboBox x:Uid="Profile_IconType"
-                                  Grid.Column="0"
-                                  ItemsSource="{x:Bind Profile.IconTypes}"
-                                  SelectedItem="{x:Bind Profile.CurrentIconType, Mode=TwoWay}">
-                            <ComboBox.ItemTemplate>
-                                <DataTemplate x:DataType="local:EnumEntry">
-                                    <TextBlock Text="{x:Bind EnumName}" />
-                                </DataTemplate>
-                            </ComboBox.ItemTemplate>
-                        </ComboBox>
-
-                        <!--  Built-In Icon  -->
-                        <AutoSuggestBox x:Uid="Profile_BuiltInIcon"
-                                        Grid.Column="1"
-                                        GotFocus="BuiltInIconPicker_GotFocus"
-                                        ItemsSource="{x:Bind FilteredBuiltInIconList, Mode=OneWay}"
-                                        QuerySubmitted="BuiltInIconPicker_QuerySubmitted"
-                                        Text="{x:Bind Profile.CurrentBuiltInIcon.EnumName, Mode=OneWay}"
-                                        TextBoxStyle="{StaticResource TextBoxSettingStyle}"
-                                        TextChanged="BuiltInIconPicker_TextChanged"
-                                        Visibility="{x:Bind Profile.UsingBuiltInIcon, Mode=OneWay}">
-                            <AutoSuggestBox.ItemTemplate>
-                                <DataTemplate x:DataType="local:EnumEntry">
-                                    <Grid ColumnSpacing="12">
-                                        <Grid.ColumnDefinitions>
-                                            <ColumnDefinition Width="16" />
-                                            <ColumnDefinition Width="*" />
-                                        </Grid.ColumnDefinitions>
-
-                                        <IconSourceElement Grid.Column="0"
-                                                           Width="16"
-                                                           Height="16"
-                                                           IconSource="{x:Bind local:Profiles_Base.BuiltInIconConverter(EnumValue), Mode=OneTime}" />
-                                        <TextBlock Grid.Column="1"
-                                                   Text="{x:Bind EnumName}" />
-                                    </Grid>
-                                </DataTemplate>
-                            </AutoSuggestBox.ItemTemplate>
-                        </AutoSuggestBox>
-
-                        <!--  Image (File) Icon  -->
-                        <TextBox x:Uid="Profile_IconBox"
-                                 Grid.Column="1"
-                                 MaxWidth="Infinity"
-                                 HorizontalAlignment="Stretch"
-                                 FontFamily="Segoe UI, Segoe Fluent Icons, Segoe MDL2 Assets"
-                                 IsSpellCheckEnabled="False"
-                                 Style="{StaticResource TextBoxSettingStyle}"
-                                 Text="{x:Bind Profile.IconPath, Mode=TwoWay}"
-                                 Visibility="{x:Bind Profile.UsingImageIcon, Mode=OneWay}" />
-                        <Button x:Uid="Profile_IconBrowse"
-                                Grid.Column="2"
-                                Margin="0"
-                                VerticalAlignment="Top"
-                                Click="Icon_Click"
-                                Style="{StaticResource BrowseButtonStyle}"
-                                Visibility="{x:Bind Profile.UsingImageIcon, Mode=OneWay}" />
-
-                        <!--  Emoji Icon  -->
-                        <TextBox x:Uid="Profile_IconEmojiBox"
-                                 Grid.Column="1"
-                                 MaxWidth="Infinity"
-                                 FontFamily="Segoe UI, Segoe Fluent Icons, Segoe MDL2 Assets"
-                                 IsSpellCheckEnabled="False"
-                                 Style="{StaticResource TextBoxSettingStyle}"
-                                 Text="{x:Bind Profile.CurrentEmojiIcon, Mode=TwoWay}"
-                                 Visibility="{x:Bind Profile.UsingEmojiIcon, Mode=OneWay}" />
-                    </Grid>
+                    <local:IconPicker CurrentIconPath="{x:Bind Profile.IconPath, Mode=TwoWay}"
+                                      WindowRoot="{x:Bind WindowRoot, Mode=OneWay}" />
                 </local:SettingContainer.Content>
             </local:SettingContainer>
 
